--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PACMAN WITH JAVASCRIPT</title>
+    <link rel="stylesheet" href="pacman.css">
+    <script src="pacman.js"></script>
 </head>
 <body>
-    <p>absolute cinema</p>
+    <canvas id="board"></canvas>
 </body>
 </html>
