--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="pacman.js"></script>
 </head>
 <body>
+    <h1>PACMANNNNNN!!!!</h1>
     <canvas id="board"></canvas>
 </body>
 </html>
